force-app/main/default/objects/CustomObj__c/CustomObj__c.object-meta.xml
<CustomObject>
    <label>CustomObj</label>
    <nameField>
        <label>CustomObj名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>