force-app/main/default/objects/CustomObj__c/fields/CustomNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomNumber__c</fullName>
    <label>CustomNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>