force-app/main/default/objects/CustomObj__c/fields/CustomPercent__c.field-meta.xml
<CustomField>
    <fullName>CustomPercent__c</fullName>
    <label>CustomPercent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>