force-app/main/default/objects/CustomObj__c/fields/CustomPhone__c.field-meta.xml
<CustomField>
    <fullName>CustomPhone__c</fullName>
    <label>CustomPhone</label>
    <type>Phone</type>
</CustomField>